@@ -6,6 +6,10 @@
         "static": true,
         "node_modules": true,
         "htmlcov": true,
+        "build": true,
+        "*.log": true,
+        "*.egg-info": true,
+        "src/sentry/locale": true,
         "src/sentry/static/sentry/dist/": true
     },
     "files.trimTrailingWhitespace": true,
