@@ -5,6 +5,7 @@ from django.utils.http import urlquote
 from django.core.urlresolvers import reverse
 from exam import fixture
 
+from sentry import options
 from sentry.testutils import TestCase
 from sentry.models import User
 
@@ -55,11 +56,13 @@ class AuthLoginTest(TestCase):
         assert resp.status_code == 302
 
     def test_registration_disabled(self):
+        options.set('auth.allow-registration', True)
         with self.feature('auth:register', False):
             resp = self.client.get(self.path)
             assert resp.context['register_form'] is None
 
     def test_registration_valid(self):
+        options.set('auth.allow-registration', True)
         with self.feature('auth:register'):
             resp = self.client.post(self.path, {
                 'username': 'test-a-really-long-email-address@example.com',
@@ -72,6 +75,7 @@ class AuthLoginTest(TestCase):
         assert user.check_password('foobar')
 
     def test_register_renders_correct_template(self):
+        options.set('auth.allow-registration', True)
         register_path = reverse('sentry-register')
         resp = self.client.get(register_path)
 
